Fixing bottom menu spacing

--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,6 @@ body {
   color: #fff;
   font-weight: bold;
   text-decoration: none;
-  padding-right: 10px;
 }
 .yearLink {
   display: none;
